--- a/css/details.css
+++ b/css/details.css
@@ -1,23 +1,34 @@
-p, h3, h4, body{
+p,
+h3,
+h4,
+body {
     margin: 0;
     font-family: Quicksand;
     /* text-align: justify; */
 }
+
 a {
     text-decoration: none;
 }
-.sub-title{
+
+.page-container {
+    background-color: #fffaf0;
+}
+
+.sub-title {
     grid-column: span 2;
-    color: #F2AB1E;
+    color: #FF6B35;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 25px;
     margin-bottom: 2%;
 }
-.fa-star{
-    color: #EEBE62; 
+
+.fa-star {
+    color: #FF6B35;
 }
-.go_top_btn{
+
+.go_top_btn {
     position: fixed;
     bottom: 35px;
     right: 35px;
@@ -31,23 +42,28 @@ a {
     align-content: center;
     z-index: 99;
 }
-#to_top{
+
+#to_top {
     width: 70px;
     height: 70px;
 }
+
 /* Address */
-.address{
+.address {
     margin-top: 110px;
     padding: 25px 4%;
     text-align: left;
     font-family: Quicksand;
     font-size: 20px;
+    background-color: #fffaf0;
 }
-.product-link{
+
+.product-link {
     color: #000;
     text-transform: uppercase;
 }
-.current-link{
+
+.current-link {
     font-weight: bold;
 }
 
@@ -58,79 +74,96 @@ a {
     column-gap: 5%;
     margin: 0 5%;
 }
+
 /* Image product infromation */
-.image{
+.image {
     display: grid;
     grid-template-columns: 80% 20%;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.img-large{
+
+.img-large {
     width: 100%;
     object-fit: contain;
 
 }
-.img-large .img{
+
+.img-large .img {
     width: 90%;
     object-fit: contain;
 }
-.img-small-group{
+
+.img-small-group {
     display: grid;
 }
-.img-small-row{
+
+.img-small-row {
     padding-bottom: 10px;
 }
-.img-small{
+
+.img-small {
     width: 50%;
     padding: 5px;
     border: 2px solid #000;
     border-radius: 20px;
     cursor: pointer;
 }
+
 /* Infomation product */
-.infomation{
+.infomation {
     margin-top: 5%;
 }
-.infomation .title{
+
+.infomation .title {
     font-size: 35px;
     font-weight: bold;
     letter-spacing: 1.75px;
 }
+
 .infomation .evaluate-info {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
-.infomation .evaluate-info .star-evaluate{
+
+.infomation .evaluate-info .star-evaluate {
     display: flex;
     margin-right: 15%;
     align-items: center;
 }
-.star-evaluate .fa-star{
+
+.star-evaluate .fa-star {
     text-align: center;
     padding-left: 5%;
 }
-.infomation .evaluate-info span{
-    color: #EEBE62;
+
+.infomation .evaluate-info span {
+    color: #FF6B35;
     font-weight: bold;
 }
-.infomation .evaluate-info p{
+
+.infomation .evaluate-info p {
     font-size: 22px;
 }
-.infomation .evaluate-info p:first-child{
+
+.infomation .evaluate-info p:first-child {
     letter-spacing: 1.75px;
 }
+
 .infomation .evaluate-info p:not(:first-child) {
     padding: 0 2%;
 }
+
 .infomation .evaluate-info p:not(:first-child, :last-child) {
     border-right: 1px solid #BBB;
 }
-.infomation .price{
+
+.infomation .price {
     display: inline-block !important;
     border-radius: 25px;
-    background: var(--EEBE62, #EEBE62);
+    background: var(--EEBE62, #fc591e);
     padding: 10px 30px;
     color: #fff;
     font-weight: bold;
@@ -138,54 +171,63 @@ a {
     font-size: 30px;
     margin: 35px 0;
 }
-.infomation .quantity{
+
+.infomation .quantity {
     display: flex;
     column-gap: 10px;
     align-items: center;
 }
-.infomation .quantity-btn{
+
+.infomation .quantity-btn {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #D9D9D9;
     border-radius: 5px;
 }
-.infomation .quantity-btn button{
+
+.infomation .quantity-btn button {
     padding: 8px 8px;
     cursor: pointer;
     background: none;
     border: none;
 }
-.infomation .quantity-btn button:hover{
+
+.infomation .quantity-btn button:hover {
     background: #ccc;
 }
-.infomation .quantity-btn .quantity-num{
+
+.infomation .quantity-btn .quantity-num {
     border-left: 1px solid #D9D9D9;
     border-right: 1px solid #D9D9D9;
     padding: 5px 15px;
     cursor: text;
 }
-.infomation .btn-cart-buy{
+
+.infomation .btn-cart-buy {
     display: flex;
     column-gap: 15px;
     margin-top: 20px;
 }
-.infomation .btn-cart-buy *{
+
+.infomation .btn-cart-buy * {
     padding: 10px 10px 10px 5px;
     font-weight: bold;
     border-radius: 15px;
     cursor: pointer;
 }
-.infomation .btn-cart-buy .add-cart{
+
+.infomation .btn-cart-buy .add-cart {
     border: 1px solid #000;
 }
-.infomation .btn-cart-buy .buy-now{
-    border: 1px solid #F2AB1E;
-    background: #F2AB1E;
+
+.infomation .btn-cart-buy .buy-now {
+    border: 1px solid #fc591e;
+    background: #fc591e;
 }
 
 /* Product describe */
-.product-describe{
+.product-describe {
     display: grid;
     grid-template-columns: 62% 33%;
     column-gap: 5%;
@@ -193,30 +235,36 @@ a {
     margin: 4% 5% 0;
     padding-top: 3%;
 }
-.product-describe .describe-content, .product-describe .promotion-benefit-content{
+
+.product-describe .describe-content,
+.product-describe .promotion-benefit-content {
     padding: 3% 5%;
     border-radius: 20px;
     font-size: 18px;
     border: 1px solid #868686;
 }
-.product-describe .describe-content{
-    background: #EFBB3F;
+
+.product-describe .describe-content {
+    background: #FF8C4E;
 }
-.product-describe .promotion-benefit-content{
+
+.product-describe .promotion-benefit-content {
     background: #FFF;
 }
-.product-describe .promotion-benefit-content .fa-check{
-    color: #EEBE62;
+
+.product-describe .promotion-benefit-content .fa-check {
+    color: #FF6B35;
     padding-right: 2%;
 }
 
 /* Product suggest */
-.product-suggest .sub-title{
+.product-suggest .sub-title {
     border-top: 1px solid #D9D9D9;
     margin: 4% 5% 2%;
     padding-top: 3%;
 }
-.product-slider{
+
+.product-slider {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
     justify-content: space-around;
@@ -224,148 +272,175 @@ a {
     background: #DDD;
     padding: 2% 0;
 }
-.product-slider .product{
+
+.product-slider .product {
     width: 217px;
     height: 270px;
     text-align: center;
     border-radius: 19.203px;
-    background: #EFBB3F;
+    background-image: linear-gradient(to bottom, #FF9933, #FF6B35);
     box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.50);
     align-self: center;
-    justify-self: center;   
+    justify-self: center;
 }
-.product-slider .product .product-image{
+
+.product-slider .product .product-image {
     width: 217px;
     height: 190px;
     border-radius: 19.2px;
     background: #FFF;
 }
-.product-slider .product .star{
-    color: #EEBE62; 
+
+.product-slider .product .star {
+    color: #FF6B35;
     font-size: 16px;
-    display: flex; 
+    display: flex;
     padding: 10px;
 }
-.star .fa-star{
-    margin-right: 5px; 
+
+.star .fa-star {
+    margin-right: 5px;
 }
-.product-slider .product .image-product{
+
+.product-slider .product .image-product {
     height: 150px;
     width: auto;
 }
-.product-slider .product .product-information{
+
+.product-slider .product .product-information {
     float: left;
     padding: 5px 15px;
     text-decoration: none;
 }
-.product-slider .product .product-link{
+
+.product-slider .product .product-link {
     text-decoration: none;
 }
-.product-slider .product .price-product{
+
+.product-slider .product .price-product {
     width: 100%;
     color: #000;
     font-size: 20px;
     font-weight: 700;
     text-align: left;
 }
-.product-slider .product .name-product{
+
+.product-slider .product .name-product {
     color: #000;
     font-size: 18px;
     font-weight: 400;
     text-align: left;
 }
-.btn-prep, .btn-next{
+
+.btn-prep,
+.btn-next {
     background: transparent;
     outline: none;
     border: none;
-    color: #EFBB3F;
+    color: #FF6B35;
     font-size: 92px;
 }
-.slider-dot{
+
+.slider-dot {
     grid-column: span 6;
     padding-top: 2%;
     display: flex;
     justify-content: center;
     gap: 8px;
-    color: #EEBE62;
+    color: #FF6B35;
 }
-.slider-dot .fa-circle:first-child{
+
+.slider-dot .fa-circle:first-child {
     color: #212121;
 }
 
 /* Product evaluate */
-.product-evaluate{
+.product-evaluate {
     border-top: 1px solid #D9D9D9;
     margin: 4% 5% 0;
     padding-top: 3%;
 }
+
 /* Evaluate medium */
-.evaluate-medium{
+.evaluate-medium {
     display: grid;
     grid-template-columns: 20% 80%;
     align-items: center;
     padding: 1% 0;
-    border: 2px solid #F2AB1E;
+    border: 2px solid #fc591e;
     border-radius: 10px;
     margin-right: 10%;
 }
-.evaluate-medium .medium{
+
+.evaluate-medium .medium {
     text-align: center;
     font-size: 20px;
 }
-.evaluate-medium .medium span{
+
+.evaluate-medium .medium span {
     font-size: 32px;
-    color: var(--F2AB1E, #F2AB1E);
+    color: var(--F2AB1E, #fc591e);
 }
-.evaluate-medium .parts{
+
+.evaluate-medium .parts {
     display: flex;
     column-gap: 3%;
     cursor: pointer;
 }
-.evaluate-medium .part{
+
+.evaluate-medium .part {
     padding: 0.5% 1%;
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     font-size: 18px;
     color: rgba(0, 0, 0, 0.50);
 }
-.evaluate-medium .part:first-child{
+
+.evaluate-medium .part:first-child {
     border: 1px solid rgba(0, 0, 0);
     color: rgba(0, 0, 0);
 }
+
 /* Evaluates */
-.evaluate{
+.evaluate {
     display: grid;
     grid-template-columns: 15% 85%;
     align-items: center;
     margin-top: 1%;
 }
-.evaluate:not(:last-child){
+
+.evaluate:not(:last-child) {
     padding-bottom: 3%;
     border-bottom: 1px solid #D9D9D9;
 }
-.evaluate .user-img{
+
+.evaluate .user-img {
     text-align: center;
 }
-.evaluate .user-img .fa-user{
+
+.evaluate .user-img .fa-user {
     border-radius: 50px;
     border: 1px solid #000;
     padding: 10%;
     font-size: 20px;
 }
-.user-evaluate *:not(.fa-star){
+
+.user-evaluate *:not(.fa-star) {
     padding-top: 10px;
 }
-.evaluate .user-name{
+
+.evaluate .user-name {
     color: #1E2D7D;
     font-family: Inter;
     font-weight: bold;
     font-size: 20px;
 }
-.evaluate .hour-day-evaluate{
+
+.evaluate .hour-day-evaluate {
     color: #6C757D;
     font-size: 14px;
 }
-.evaluate .evaluate-text{
+
+.evaluate .evaluate-text {
     font-size: 18px;
 }
