--- a/css/shop-category.css
+++ b/css/shop-category.css
@@ -4,10 +4,12 @@ body {
     background: #fffaf0;
     font-family: Quicksand;
 }
+
 a {
     text-decoration: none;
 }
-.go_top_btn{
+
+.go_top_btn {
     position: fixed;
     bottom: 35px;
     right: 35px;
@@ -21,10 +23,12 @@ a {
     align-content: center;
     z-index: 99;
 }
-#to_top{
+
+#to_top {
     width: 70px;
     height: 70px;
 }
+
 /* Address */
 .address {
     margin-top: 110px;
@@ -32,10 +36,12 @@ a {
     text-align: left;
     font-size: 1.25rem;
 }
+
 .address-link {
     color: #000;
     text-transform: uppercase;
 }
+
 .current-link {
     font-weight: bold;
 }
@@ -44,14 +50,15 @@ a {
     display: flex;
     justify-content: space-between;
     margin: 0 4%;
-/* background: #fffaf0; */
+    /* background: #fffaf0; */
 }
 
 .sidebar-filter {
     width: 20%;
-/* width: 299px; */
+    /* width: 299px; */
 }
-.sidebar-filter>p{
+
+.sidebar-filter>p {
     font-size: 1.25rem;
 }
 
@@ -64,15 +71,18 @@ a {
     margin-bottom: 1em;
     padding-bottom: 1em;
 }
+
 .filter-block:not(:last-child) {
     border-bottom: 1px solid #ccc;
 }
+
 .filter-title {
     display: flex;
     margin-top: 0.5em;
     margin-bottom: 1em;
     align-items: center;
 }
+
 .filter-title h4 {
     margin: 0;
     font-size: 1.5625rem;
@@ -80,14 +90,16 @@ a {
     width: 45%;
     cursor: pointer;
 }
-.filter-title h4::before{
+
+.filter-title h4::before {
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
     content: "\f078";
     font-size: 1.5625rem;
     padding-right: 10%;
 }
-.show-dropdown .filter-title h4::before{
+
+.show-dropdown .filter-title h4::before {
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
     content: "\f077";
@@ -96,17 +108,20 @@ a {
 }
 
 /* Filter Price */
-.range-price{
+.range-price {
     display: none;
 }
-.show-dropdown .range-price{
+
+.show-dropdown .range-price {
     display: block;
 }
+
 .range-price .price-input {
     width: 100%;
     display: flex;
     margin-bottom: 5%;
 }
+
 .range-price .field input {
     width: 85%;
     height: 100%;
@@ -117,16 +132,19 @@ a {
     text-align: center;
     -moz-appearance: textfield;
     appearance: textfield;
-    }
-    input[type="number"]::-webkit-inner-spin-button,
-    input[type="number"]::-webkit-outer-spin-button {
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
+
 .range-price .price-input .seperator {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .range-price .slider {
     height: 5px;
     border-radius: 5px;
@@ -134,17 +152,20 @@ a {
     position: relative;
     margin: 0 3%;
 }
+
 .range-price .slider .progress {
     height: 5px;
     left: 0;
     right: 0;
     position: absolute;
     border-radius: 5px;
-    background: #eebe62;
+    background: #FF6B35;
 }
+
 .range-price .range-input {
     position: relative;
 }
+
 .range-price .range-input input {
     position: absolute;
     top: -5px;
@@ -155,16 +176,18 @@ a {
     pointer-events: none;
     background: none;
 }
+
 input[type="range"]::-webkit-slider-thumb {
     height: 15px;
     width: 15px;
     border-radius: 50%;
     -webkit-appearance: none;
     appearance: none;
-    background: #eebe62;
+    background: #fc591e;
     pointer-events: auto;
     cursor: pointer;
 }
+
 input[type="range"]::-moz-range-thumb {
     height: 15px;
     width: 15px;
@@ -172,7 +195,7 @@ input[type="range"]::-moz-range-thumb {
     border-radius: 50%;
     -moz-appearance: none;
     appearance: none;
-    background: #eebe62;
+    background: #fc591e;
     pointer-events: auto;
     cursor: pointer;
 }
@@ -187,6 +210,7 @@ input[type="range"]::-moz-range-thumb {
     align-items: center;
     justify-content: flex-end;
 }
+
 .checkbox-all input[type="checkbox"] {
     margin: 0 0 0 10px;
 }
@@ -205,9 +229,11 @@ input[type="range"]::-moz-range-thumb {
     padding-left: 3px;
     list-style: none;
 }
+
 .show-dropdown .pets-checkbox {
     display: block;
 }
+
 input[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
@@ -287,10 +313,10 @@ input[type="checkbox"]:checked:after {
     height: 38px;
     border-radius: 35px;
     text-align: center;
-    background: #efbb3f;
+    background: #FF8C4D;
     font-size: 18px;
     cursor: pointer;
-/* appearance: none; */
+    /* appearance: none; */
 }
 
 /* Product list */
@@ -309,17 +335,19 @@ input[type="checkbox"]:checked:after {
     height: 300px;
     text-align: center;
     border-radius: 19.203px;
-    background: #efbb3f;
+    background-image: linear-gradient(to bottom, #FF9933, #fc591e);
     box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.5);
     align-self: center;
     justify-self: center;
 }
+
 .product .product-image {
     width: 100%;
     height: 65%;
     border-radius: 19.2px;
     background: #fff;
 }
+
 .product .product-image .star-and-bag_plus {
     display: grid;
     grid-template-columns: auto auto;
@@ -328,19 +356,23 @@ input[type="checkbox"]:checked:after {
     margin-bottom: 2%;
     align-items: center;
 }
+
 .product .product-image .star-and-bag_plus .star {
     font-size: 1rem;
     display: flex;
     padding: 10px;
 }
+
 .product .product-image .star-and-bag_plus .star .full.fa-star {
-    color: #eebe62;
+    color: #FF6B35;
     margin-right: 5px;
 }
+
 .product .product-image .star-and-bag_plus .star .empty.fa-star {
     color: #ccc;
     margin-right: 5px;
 }
+
 .product .product-image .star-and-bag_plus .bag-shopping {
     border-radius: 50%;
     width: 100%;
@@ -350,30 +382,37 @@ input[type="checkbox"]:checked:after {
     border: none;
     cursor: pointer;
 }
-.product .product-image .star-and-bag_plus .bag-shopping > svg {
+
+.product .product-image .star-and-bag_plus .bag-shopping>svg {
     height: 95%;
     width: 60%;
     opacity: 0;
 }
-.product:hover .product-image .star-and-bag_plus .bag-shopping > svg {
+
+.product:hover .product-image .star-and-bag_plus .bag-shopping>svg {
     opacity: 1;
 }
+
 .product .product-image .star-and-bag_plus .bag-shopping:hover {
-    fill: #efbb3f;
+    fill: #FF6B35;
 }
+
 .product .product-image .image-product {
     height: 150px;
     width: auto;
     transform: translateY(-7%);
 }
+
 .product .product-information {
     float: left;
     padding: 5px 15px;
     text-decoration: none;
 }
+
 .product .product-link {
     text-decoration: none;
 }
+
 .product .product-information .price-product {
     width: 100%;
     color: #000;
@@ -381,6 +420,7 @@ input[type="checkbox"]:checked:after {
     font-weight: 700;
     text-align: left;
 }
+
 .product .product-information .name-product {
     color: #000;
     font-size: 1.125rem;
@@ -398,10 +438,12 @@ input[type="checkbox"]:checked:after {
     padding: 10px 40px;
     border-radius: 6px;
 }
+
 .pagination {
     margin: 20px 30px;
     padding: 0;
 }
+
 .pagination li {
     display: inline-block;
     margin: 0 10px;
@@ -416,21 +458,24 @@ input[type="checkbox"]:checked:after {
     line-height: 45px;
     cursor: pointer;
 }
-.pagination li.current-page{
-    background: #eebe62;
+
+.pagination li.current-page {
+    background: #FF8C4E;
 }
+
 .btn-prep,
 .btn-next {
     background: transparent;
     outline: none;
     border: none;
-    color: #eebe62;
+    color: #FF6B35;
     opacity: 0.5;
     font-size: 2.625rem;
     cursor: pointer;
 }
+
 .btn-prep:hover,
-.btn-next:hover{
+.btn-next:hover {
     opacity: 1;
 
 }
