--- a/css/blog-details.css
+++ b/css/blog-details.css
@@ -11,9 +11,11 @@ body {
 }
 .page-ruler a{
     color: #000;
+    text-decoration: none;
 }
 .page-ruler a:visited{
     color: #000;
+    text-decoration: none;
 }
 .go_top_btn{
     position: fixed;
