--- a/css/pet-category.css
+++ b/css/pet-category.css
@@ -313,7 +313,7 @@ input[type="checkbox"]:checked:after {
     height: 38px;
     border-radius: 35px;
     text-align: center;
-    background: #FF8C4E;
+    background: #fd743e;
     font-size: 18px;
     cursor: pointer;
     /* appearance: none; */
@@ -335,7 +335,7 @@ input[type="checkbox"]:checked:after {
     height: 300px;
     text-align: center;
     border-radius: 19.203px;
-    background-image: linear-gradient(to bottom, #FF9933, #FF6B35);
+    background-image: linear-gradient(to bottom, #ff9933e8, #fc591ed9);
     box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.5);
     align-self: center;
     justify-self: center;
@@ -425,8 +425,9 @@ input[type="checkbox"]:checked:after {
 .product .product-information .name-product {
     color: #000;
     font-size: 1.125rem;
-    font-weight: 400;
+    font-weight: 500;
     text-align: left;
+    padding-top: 5px;
 }
 
 /* Pagination */
