--- a/css/footer.css
+++ b/css/footer.css
@@ -108,6 +108,7 @@ a {
 
 .footer-menu-list li {
     margin-top: 8px;
+    font-size: 20px;
 }
 
 .footer-menu-sub-list {
@@ -126,12 +127,11 @@ a {
 
 .footer-menu-sub-list li:hover {
     position: relative;
-
     left: 2%;
     color: #ff6b35;
     z-index: 0;
     cursor: pointer;
-    font-size: 1.35rem;
+    font-size: 20px;
 }
 
 
@@ -148,8 +148,8 @@ a {
     display: inline-block;
     color: #fffaf0;
     font-size: 20px;
-    font-weight: 600;
     margin-bottom: 7px;
+    font-weight: bold;
 }
 
 .icon-text {
