--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,8 @@ body {
     /* box-sizing: border-box; */
     /* font-size: 1.4rem; */
 }
-.go_top_btn{
+
+.go_top_btn {
     position: fixed;
     bottom: 35px;
     right: 35px;
@@ -19,10 +20,12 @@ body {
     align-content: center;
     z-index: 99;
 }
-#to_top{
+
+#to_top {
     width: 70px;
     height: 70px;
 }
+
 .bg_overlay {
     /* content: ""; */
     position: absolute;
@@ -45,16 +48,19 @@ body {
 
 .page-ruler {
     margin-top: 9%;
-    
+
     padding: 20px 50px;
     font-size: 1.2rem;
 }
-.page-ruler a{
+
+.page-ruler a {
     color: #000;
 }
-.page-ruler a:visited{
+
+.page-ruler a:visited {
     color: #000;
 }
+
 .container {
     margin-top: 80px;
     position: relative;
@@ -95,7 +101,47 @@ body {
     /* Đặt margin-top để tránh che header */
 }
 
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
 
+#popupContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    width: 32%;
+    height: 25vh;
+    padding: 20px 27px;
+    font-weight: bold;
+    line-height: 45px;
+    border-radius: 40px;
+}
+
+#popupContent button {
+    position: relative;
+    left: 9vw;
+    top: 4vh;
+    width: 150px;
+    height: 50px;
+    border-radius: 40px;
+    font-size: 1.2rem;
+    border: none;
+    background-color: #fc591e;
+    color: #fff;
+    cursor: pointer;
+}
 
 
 .contact-form {
