add loading page

--- a/css/Booking.css
+++ b/css/Booking.css
@@ -4,6 +4,24 @@
     font-size: 1.3rem;
     background-color: #fffaf0;
 }
+.loading-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ededed;
+    z-index: 9999;
+}
+
+.loading-gif {
+    width: 300px; /* Adjust the width as needed */
+    height: auto;
+}
+
 .go_top_btn{
     position: fixed;
     bottom: 35px;
