--- a/css/blog-details.css
+++ b/css/blog-details.css
@@ -17,6 +17,24 @@ body {
     color: #000;
     text-decoration: none;
 }
+.loading-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ededed;
+    z-index: 9999;
+}
+
+.loading-gif {
+    width: 300px; /* Adjust the width as needed */
+    height: auto;
+}
+
 .go_top_btn{
     position: fixed;
     bottom: 35px;
