--- a/css/pet-category.css
+++ b/css/pet-category.css
@@ -8,6 +8,23 @@ body {
 a {
     text-decoration: none;
 }
+.loading-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ededed;
+    z-index: 9999;
+}
+
+.loading-gif {
+    width: 300px; /* Adjust the width as needed */
+    height: auto;
+}
 
 .go_top_btn {
     position: fixed;
