--- a/css/shop-category.css
+++ b/css/shop-category.css
@@ -4,7 +4,23 @@ body {
     background: #fffaf0;
     font-family: Quicksand;
 }
+.loading-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ededed;
+    z-index: 9999;
+}
 
+.loading-gif {
+    width: 300px; /* Adjust the width as needed */
+    height: auto;
+}
 a {
     text-decoration: none;
 }
