--- a/css/footer.css
+++ b/css/footer.css
@@ -125,15 +125,33 @@ a {
     font-size: 1.2rem;
 }
 
-.footer-menu-sub-list li:hover {
+.footer-menu-sub-list a {
+    color: #fffaf0;
+    text-decoration: none;
+}
+
+.footer-menu-sub-list a:visited {
+    color: #fffaf0;
+    text-decoration: none;
+}
+
+.footer-menu-sub-list a:hover {
     position: relative;
     left: 2%;
     color: #ff6b35;
     z-index: 0;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 24px;
 }
 
+.footer-menu-sub-list span:hover {
+    position: relative;
+    left: 2%;
+    color: #ff6b35;
+    z-index: 0;
+    cursor: pointer;
+    font-size: 24px;
+}
 
 
 
