--- a/css/details.css
+++ b/css/details.css
@@ -10,23 +10,7 @@ body {
 a {
     text-decoration: none;
 }
-.loading-overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #ededed;
-    z-index: 9999;
-}
 
-.loading-gif {
-    width: 300px; /* Adjust the width as needed */
-    height: auto;
-}
 .page-container {
     background-color: #fffaf0;
 }
@@ -279,76 +263,132 @@ a {
     margin: 4% 5% 2%;
     padding-top: 3%;
 }
+.product-suggest.hidden{
+    display: none;
+}
 
 .product-slider {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
-    justify-content: space-around;
+    grid-template-columns: 10% 80% 10%;
     align-items: center;
     background: #DDD;
-    padding: 2% 0;
+    padding: 2% 3%;
+    position: relative;
+    overflow: hidden;
 }
 
-.product-slider .product {
-    width: 217px;
-    height: 270px;
+.product-slider .all-product {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Adjust as needed */
+    padding: 2% 3%;
+    overflow: hidden; /* Hide the overflowing content */
+    /* width: calc(100% - 20px); Adjust for margin-right of products */
+    transition: transform 0.5s ease-in-out;
+    column-gap: 69px;
+}
+
+.product-slider .all-product .product {
+    min-width: 217px; /* Set a minimum width */
+    height: 300px;
     text-align: center;
     border-radius: 19.203px;
-    background-image: linear-gradient(to bottom, #FF9933, #FF6B35);
-    box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.50);
+    background-image: linear-gradient(to bottom, #ff9933e8, #fc591ed9);
+    box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.5);
     align-self: center;
     justify-self: center;
+    box-sizing: border-box;
+    /* margin-right: 69px; */
+    flex-grow: 1; /* Allow products to grow and fill available space */
+    flex-basis: calc(33.333% - 10px);
 }
 
-.product-slider .product .product-image {
-    width: 217px;
-    height: 190px;
+.product-slider .all-product .product .product-image {
+    width: 100%;
+    height: 65%;
     border-radius: 19.2px;
-    background: #FFF;
+    background: #fff;
 }
 
-.product-slider .product .star {
-    color: #FF6B35;
-    font-size: 16px;
+.product-slider .all-product .product .product-image .star-and-bag_plus {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+    height: 25%;
+    margin-bottom: 2%;
+    align-items: center;
+}
+
+.product-slider .all-product .product .product-image .star-and-bag_plus .star {
+    font-size: 1rem;
     display: flex;
     padding: 10px;
 }
 
-.star .fa-star {
+.product-slider .all-product .product .product-image .star-and-bag_plus .star .full.fa-star {
+    color: #FF6B35;
     margin-right: 5px;
 }
 
-.product-slider .product .image-product {
-    height: 150px;
-    width: auto;
+.product-slider .all-product .product .product-image .star-and-bag_plus .star .empty.fa-star {
+    color: #ccc;
+    margin-right: 5px;
 }
 
-.product-slider .product .product-information {
+.product-slider .all-product .product .product-image .star-and-bag_plus .bag-shopping {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    margin-right: 3%;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+.product-slider .all-product .product .product-image .star-and-bag_plus .bag-shopping>svg {
+    height: 95%;
+    width: 60%;
+    opacity: 0;
+}
+.product-slider .all-product .product:hover .product-image .star-and-bag_plus .bag-shopping>svg {
+    opacity: 1;
+}
+.product-slider .all-product .product .product-image .star-and-bag_plus .bag-shopping:hover {
+    fill: #FF6B35;
+}
+.product-slider .all-product .product .product-image .image-product {
+    height: 150px;
+    width: auto;
+    transform: translateY(-10%);
+}
+.product-slider .all-product .product .product-information {
     float: left;
     padding: 5px 15px;
     text-decoration: none;
 }
-
-.product-slider .product .product-link {
+.product-slider .all-product .product .product-link {
     text-decoration: none;
 }
-
-.product-slider .product .price-product {
+.product-slider .all-product .product .product-information .price-product {
     width: 100%;
     color: #000;
     font-size: 20px;
     font-weight: 700;
     text-align: left;
+    margin: 3% 0 5%;
 }
-
-.product-slider .product .name-product {
+.product-slider .all-product .product .product-information .name-product {
     color: #000;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 1.125rem;
+    font-weight: 500;
     text-align: left;
+    padding-top: 5px;
 }
-
-.btn-prep,
+.slider-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-prev,
 .btn-next {
     background: transparent;
     outline: none;
@@ -356,19 +396,19 @@ a {
     color: #FF6B35;
     font-size: 92px;
 }
-
 .slider-dot {
     grid-column: span 6;
-    padding-top: 2%;
+    padding-top: 1%;
     display: flex;
     justify-content: center;
     gap: 8px;
     color: #FF6B35;
 }
 
-.slider-dot .fa-circle:first-child {
+.slider-dot .fa-circle.active {
     color: #212121;
 }
+
 
 /* Product evaluate */
 .product-evaluate {
