fix background pet page

--- a/css/pet-category.css
+++ b/css/pet-category.css
@@ -335,6 +335,9 @@ input[type="checkbox"]:checked:after {
     cursor: pointer;
     /* appearance: none; */
 }
+.sort-options .sort-select option {
+    background-color: #fff;
+}
 
 /* Product list */
 #product-list {
