--- a/css/details.css
+++ b/css/details.css
@@ -287,7 +287,7 @@ a {
     display: grid;
     grid-template-columns: 10% 80% 10%;
     align-items: center;
-    background: #DDD;
+    background: #dddddd63;
     padding: 2% 3%;
     position: relative;
     overflow: hidden;
