--- a/css/payment.css
+++ b/css/payment.css
@@ -553,6 +553,7 @@ input[type="radio"]:checked:after {
     text-align: right;
     color: #fc591e;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .order-price .delivery-address .user p:not(:nth-child(2)) {
